Add internationalization support for IconBar: update tooltips to use translation keys for English and French

--- a/frontend/src/i18n/en.json
+++ b/frontend/src/i18n/en.json
@@ -10,6 +10,7 @@
     "no_contact_selected": "Open a .vcf file and select a contact"
   },
   "contact": {
+    "new_contact": "New contact",
     "save": "Save",
     "saved": "Saved",
     "no_name": "No name",
