--- a/frontend/src/i18n/fr.json
+++ b/frontend/src/i18n/fr.json
@@ -10,6 +10,7 @@
     "no_contact_selected": "Ouvre un fichier .vcf et sélectionne un contact"
   },
   "contact": {
+    "new_contact": "Nouveau contact",
     "save": "Sauvegarder",
     "saved": "Sauvegardé",
     "no_name": "Sans nom",
