--- a/frontend/src/i18n/en.json
+++ b/frontend/src/i18n/en.json
@@ -66,5 +66,22 @@
     "description": "A tool to edit (Modify, delete) VCF files.",
     "subtitle": "Manage your vCard contacts with ease.",
     "copyright": "© 2025 abdelkader · All rights reserved"
+  },
+  "export": {
+    "title": "Export {{count}} contact",
+    "title_plural": "Export {{count}} contacts",
+    "format": "Format",
+    "destination": "Destination",
+    "single_file": "Single file",
+    "single_file_desc": "all contacts grouped together",
+    "one_per_contact": "One file per contact",
+    "one_per_contact_desc": "choose a folder",
+    "csv_no_split": "(not available in CSV)",
+    "ok": "Export",
+    "cancel": "Cancel",
+    "vcf_desc": "vCard 4.0 — compatible with all devices",
+    "json_desc": "jCard (RFC 7095)",
+    "csv_desc": "Google Contacts format",
+    "xml_desc": "xCard (RFC 6351)"
   }
 }
