Enhance TitleBar component to display current file path and dirty state; update media labels in English and French translations; refactor importFormats utility for better type handling; add MIT License file.

--- a/frontend/src/i18n/en.json
+++ b/frontend/src/i18n/en.json
@@ -101,10 +101,10 @@
     "title": "🛠️ Tools",
     "import": "📥 Import",
     "export": "📤 Export",
-    "media": "🎨 Media"
+    "media": "🎨 Media Manager"
   },
 "media": {
-  "title": "Media Manager",
+  "title": "🎨 Media Manager",
   "photos": "Photos",
   "logos": "Logos",
   "sounds": "Audio",
