--- a/frontend/src/i18n/fr.json
+++ b/frontend/src/i18n/fr.json
@@ -101,7 +101,7 @@
     "title": "Outils",
     "import": "📥 Importer",
     "export": "📤 Exporter",
-    "media": "Media"
+    "media": "Gestion des médias"
   },
   "media": {
     "title": "Gestion des médias",
